--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rsvp-manager",
   "version": "1.0.0",
   "scripts": {
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test"
+    "start": "node server.js",
+    "build": "tsc",
+    "test": "echo \"No tests configured\""
   },
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
